# METR4202T5

./: CMakeLists.txt  README.md  additionalSetup.txt  inverse_kinematics_geom.py  joint_states_publisher.py  main.py  metr4202T5.launch  node_topic_architecture.docx  package.xml
Imaging/: rosStructure.txt
Imaging/calibration data/: ximea_31706251.yaml
Imaging/metr4202_msgs/: CMakeLists.txt  package.xml
Imaging/transforms/: CMakeLists.txt  package.xml
Imaging/transforms/msg/: block.msg
Imaging/transforms/scripts/: detect_block.py
Imaging/transforms/src/: calibrate.py  detect_block.py
Imaging/ximea/ximea_color/: CMakeLists.txt
Imaging/ximea/ximea_color/src/: camera.py  ximea_color_detect.cpp
Imaging/ximea/ximea_ros/: CMakeLists.txt
Imaging/ximea/ximea_ros/launch/: ximea_aruco.launch
Imaging/ximea/ximea_ros/src/: ximea_camera.cpp  ximea_ros.cpp
additional information/: rosStructure.txt
additional information/calibration data/: readme.txt
gripper/: CMakeLists.txt  package.xml
gripper/scripts/: gripper_driver.py  gripper_publisher.py
kinematics/: CMakeLists.txt  inverse_kinematics.py  joint_states_publisher.py  main.py  package.xml  trajectory_to_block.py
kinematics/scripts/: dummy_block_publisher.py  joint_states_3b.py  joint_states_publisher.py  trajectory_to_block.py
metr4202_global_topics/: CMakeLists.txt  package.xml  state.py
metr4202_global_topics/scripts/: state.py
metr4202_launch/launch/: metr4202_camera.launch  metr4202_launch.launch
putdown/: CMakeLists.txt  package.xml  putdown_launch
putdown/scripts/: putdownkinematics.py
putdown/src/: grip_set.msg  putdownkinematics.py
state_machine/: CMakeLists.txt  package.xml  state_machine.py
